// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu/> should render correctly moderator 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <ul
            class="header-menu"
          >
            <li
              class="board-settings"
            >
              <form>
                <input
                  class="board-settings__board-name"
                  disabled=""
                  value="board"
                />
                <button
                  class="board-settings__access-mode"
                  disabled=""
                  type="button"
                >
                  <div
                    class="board-settings__access-mode-lock"
                  />
                  Private Session
                </button>
                <button
                  class="board-settings__edit-button"
                  type="submit"
                >
                  edit
                </button>
              </form>
            </li>
            <li
              class="board-option"
              data-testid="author"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--right"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Hide authors of card
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="note"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--left"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Show notes of other users
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="column"
            >
              <button
                class="board-option-button"
              >
                <div
                  class="board-option-toggle"
                >
                  <div
                    class="board-option-toggle__switch board-option-toggle__switch--right"
                  />
                </div>
                <span
                  class="board-option-button__label"
                >
                  Hide columns
                </span>
              </button>
            </li>
            <li
              class="board-option"
              data-testid="qrcode"
            >
              <button
                class="board-option-button board-option-button--expandable"
              >
                <svg
                  class="board-option-button__icon"
                >
                  icon-share.svg
                </svg>
                <span
                  class="board-option-button__label"
                >
                  Share board
                </span>
              </button>
              <div
                class="share-qr-code-option__container"
              >
                <canvas
                  class="share-qr-code-option__qrcode"
                  height="260"
                  style="height: 260px; width: 260px;"
                  width="260"
                />
                <button
                  class="share-qr-code-option__copy-to-clipboard"
                  tabindex="-1"
                >
                  Copy Invite URL
                </button>
              </div>
            </li>
            <li
              class="board-option"
              data-testid="delete"
            >
              <button
                class="board-option-button board-option-button--expandable"
              >
                <svg
                  class="board-option-button__icon"
                >
                  icon-delete.svg
                </svg>
                <span
                  class="board-option-button__label"
                >
                  Delete board
                </span>
              </button>
              <div
                class="delete-board-option__container"
              >
                <label
                  class="delete-board-option__warning-label"
                >
                  <b>
                    Are you absolutely sure that you want to delete the board?
                  </b>
                   This action 
                  <b>
                    cannot
                  </b>
                   be undone.
                </label>
                <button
                  class="delete-board-option__delete-board"
                  tabindex="-1"
                >
                  Delete board
                </button>
              </div>
            </li>
            <li
              class="board-option"
              data-testid="export"
            >
              <button
                class="board-option-button board-option-button--expandable"
              >
                <svg
                  class="board-option-button__icon"
                >
                  icon-share.svg
                </svg>
                <span
                  class="board-option-button__label"
                >
                  Export board
                </span>
              </button>
              <div
                class="export-board-option__container"
              >
                <button
                  class="board-option-button"
                  data-testid="export-json"
                  tabindex="-1"
                >
                  <svg
                    class="board-option-button__icon"
                  >
                    icon-share.svg
                  </svg>
                  <span
                    class="board-option-button__label"
                  >
                    Export as json
                  </span>
                </button>
                <button
                  class="board-option-button"
                  data-testid="export-csv"
                  tabindex="-1"
                >
                  <svg
                    class="board-option-button__icon"
                  >
                    icon-share.svg
                  </svg>
                  <span
                    class="board-option-button__label"
                  >
                    Export as csv
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`<HeaderMenu/> should render correctly user 1`] = `
<div
  id="portal"
>
  <div
    class="portal"
    role="dialog"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="portal__frame"
      >
        <div
          class="portal__content"
          role="dialog"
        >
          <ul
            class="header-menu"
          >
            <li
              class="board-settings"
            >
              <form>
                <input
                  class="board-settings__board-name"
                  disabled=""
                  value="board"
                />
                <button
                  class="board-settings__access-mode"
                  disabled=""
                  type="button"
                >
                  <div
                    class="board-settings__access-mode-lock"
                  />
                  Private Session
                </button>
              </form>
            </li>
            <li
              class="board-option"
              data-testid="export"
            >
              <button
                class="board-option-button board-option-button--expandable"
              >
                <svg
                  class="board-option-button__icon"
                >
                  icon-share.svg
                </svg>
                <span
                  class="board-option-button__label"
                >
                  Export board
                </span>
              </button>
              <div
                class="export-board-option__container"
              >
                <button
                  class="board-option-button"
                  data-testid="export-json"
                  tabindex="-1"
                >
                  <svg
                    class="board-option-button__icon"
                  >
                    icon-share.svg
                  </svg>
                  <span
                    class="board-option-button__label"
                  >
                    Export as json
                  </span>
                </button>
                <button
                  class="board-option-button"
                  data-testid="export-csv"
                  tabindex="-1"
                >
                  <svg
                    class="board-option-button__icon"
                  >
                    icon-share.svg
                  </svg>
                  <span
                    class="board-option-button__label"
                  >
                    Export as csv
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;
